fix image and text overflow in .indexAside

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 *, :after,:before{
-    padding: 0em;
-    margin: 0em;
-    box-sizing: border-box !important;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     scroll-behavior: smooth;
 }
 :root{
@@ -12,17 +12,18 @@
 
 /* for index.html file */
 }
+
 body.home{
+    font-size: 1rem;
     min-height: 100vh;
     font-family: 'Open Sans', sans-serif;
-    background-image: url('img.jpg');
-    background-blend-mode: darken;
+    background-image: url('/images/img.jpg');
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     color: var(--text-darkMode-color) ;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100vw;
     grid-template-areas:"header"
                         "nav"
                         "section"
@@ -32,7 +33,7 @@ body.home{
 }
 
 .home header{
-    min-width: 100vw;
+    max-width: 100vw;
  grid-area: header;
  display: flex;
  justify-content: center;
@@ -42,7 +43,7 @@ body.home{
 background: linear-gradient(rgb(0, 0, 0), rgba(99, 36, 36, 0.349));
 }
 .home footer{
-    
+    min-width: 0;
     grid-area: footer;
     border:1px solid rgb(90, 46, 46);
     color: var(--text-grey);
@@ -87,16 +88,7 @@ background: linear-gradient(rgb(0, 0, 0), rgba(99, 36, 36, 0.349));
     text-shadow: 2px 2px 10px rgb(241, 7, 190);
     text-transform: uppercase;
 }
-footer em:hover::after{
-    content: ')';
-    cursor: pointer;
-    animation: shake 1s alternate infinite;
-}
-footer em:hover::before{
-    content: '(';
-    cursor: pointer;
-    animation: shake 1s alternate infinite;
-}
+
 footer em:hover{
     cursor: pointer;
     animation: shake 1s alternate infinite;
@@ -125,92 +117,62 @@ footer em:hover{
     padding: 1em;
     box-shadow: 1px 1px 10px 10px rgb(44, 40, 40); 
 }
-.navlist{
-display: flex;
-justify-content: space-around;
-list-style: none;
-border:5px solid rgb(29, 167, 91);
-border-top:0px ;
-border-bottom: 0px;
-padding: 0.5em;
-text-decoration: none;
-}
-.lists a{
-    text-decoration: none;
-    border: 1px solid rgba(0, 128, 0, 0.397);
-    padding: 0.9em;
-    border-radius: 10%;
-    background: linear-gradient(rgba(133, 81, 201, 0.363),rgba(0, 128, 0, 0.384));
-    color: var(--text-darkMode-color);
-   transition: .1s step-end;
-
-}
-.lists a:hover{
-    background: linear-gradient(rgba(0, 128, 0, 0.384),rgba(133, 81, 201, 0.363));
-    color:greenyellow;
-    cursor: pointer;
-    box-shadow: -3px -4px 10px green;
-    transition: .3s ease;
-   
-}
-.lists:hover{
-    color:green;}
-.icon img{
-    max-width: 50px;
-    width: 90%;
-    height: auto;
-}
 
 .profileName {
     grid-area: section;
     padding: 1em;
-    
     font-size: x-large;
 
 }
 main{
-    grid-area: main;
-    min-height: 100%;
+    max-width: 100vw;
+    grid-area: main;    
     display: grid;
-    grid-template-columns: 2.5fr 1fr;
+    grid-template-columns: 60% 40%;
+    overflow: hidden;
+    
+    
 }
 .home article{
-    min-height: 100%;
-    padding: 1em;
-    border:1px solid indianred;
-    margin: 1.5em;
+    display: block;
+    max-width: 800px;
+    min-width: calc(100%-769px);
+   
+    /* border:1px solid indianred; */
+    box-shadow: -8px 7px 10px 1px rgb(25, 122, 106) inset ;
+    margin: 1em;
     border-radius: 2em;
-    box-shadow: 8px 7px 10px 1px rgb(25, 122, 106) ;
-    font-size: medium;
-    text-indent: 30px;
-    letter-spacing: 3px;
-    line-height: 2;
-    font-family: 'Indie Flower', cursive;
-
-
+    
+}
+article p{
+    text-align: center;
+    width: 90%;
+    padding: 1em;
+    font-size: medium; 
+    text-indent: 0.2em;
+    word-wrap: break-word;
 }
  article:hover{
-     box-shadow: -8px -7px 10px 1px rgb(25, 122, 106) ;
+     box-shadow: -8px -7px 10px 1px rgb(25, 122, 106) inset ;
 
 
 }
-.indexAside{
-    min-height: 100%;
-    padding: 1em;
-    border:1px solid indianred;
-    margin: 1.5em;
-    border-radius: 2em;
-    box-shadow: 8px -7px 10px 1px rgb(25, 122, 106) ;
-
+main .indexAside{
+    max-width: calc(100%-800px);
+    
 }
-.indexAside:hover{
-    box-shadow: -8px 7px 10px 1px rgb(25, 122, 106) ;
+.indexAside img:hover{
+    box-shadow: -8px 7px 10px 1px rgba(58, 124, 113, 0.116) inset;
  
+}
+.indexAside img{
+   
+  
 }
   .nextbutton a{
        text-decoration: none;
        border: 1px solid grey;
-        padding: 0.3em 1em;
+        padding: 0.3em 0em;
         border-radius: 10%;
         background: linear-gradient(rgba(133, 81, 201, 0.363),rgba(0, 128, 0, 0.384));
         color: var(--text-darkMode-color);
